fix package name com->cn